fix: index style on mobile frontend

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -22,7 +22,7 @@
 
 .home_container {
   position: relative;
-  height: 85vh;
+  height: 92vh;
 }
 
 .home_image {
